Store source, sink table and service account in variables to make it easier to change

--- a/examples/batch/Batch Prediction Tutorial 1 - Iris Classifier.ipynb
+++ b/examples/batch/Batch Prediction Tutorial 1 - Iris Classifier.ipynb
@@ -254,7 +254,7 @@
     "import merlin\n",
     "from merlin.model import ModelType\n",
     "\n",
-    "merlin.set_url(\"http://localhost:3000/api/merlin\")"
+    "merlin.set_url(\"localhost:3000/api/merlin\")"
    ]
   },
   {
@@ -397,6 +397,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "source_table = \"your-gcp-project.dataset.table\"\n",
+    "sink_table = \"your-gcp-project.dataset.result_table\"\n",
+    "service_account = \"your-gcp-project.iam.gserviceaccount.com\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from merlin.batch.source import BigQuerySource"
    ]
   },
@@ -416,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bq_source = BigQuerySource(table=\"your-gcp-project.dataset.table\",\n",
+    "bq_source = BigQuerySource(table=source_table,\n",
     "                           features=[\"sepal_length\", \n",
     "                                     \"sepal_width\", \n",
     "                                     \"petal_length\", \n",
@@ -472,7 +483,7 @@
    "source": [
     "from merlin.batch.sink import SaveMode\n",
     "\n",
-    "bq_sink = BigQuerySink(table=\"your-gcp-project.dataset.result_table\",\n",
+    "bq_sink = BigQuerySink(table=sink_table,\n",
     "                       staging_bucket=\"your-bucket\",\n",
     "                       result_column=\"species\",\n",
     "                       save_mode=SaveMode.OVERWRITE)"
@@ -515,7 +526,7 @@
     "\n",
     "job_config = PredictionJobConfig(source=bq_source, \n",
     "                                 sink=bq_sink, \n",
-    "                                 service_account_name=\"batch-service-account@your-gcp-project.iam.gserviceaccount.com\")"
+    "                                 service_account_name=service_account)"
    ]
   },
   {
@@ -584,17 +595,24 @@
    "outputs": [],
    "source": [
     "client = bigquery.Client()\n",
-    "query_job = client.query(\"\"\"\n",
+    "query_job = client.query(f\"\"\"\n",
     "    SELECT\n",
     "      *\n",
     "    FROM\n",
-    "      `your-gcp-project.dataset.result_table`\n",
+    "      `{sink_table}`\n",
     "    LIMIT\n",
     "      100\"\"\")\n",
     "\n",
     "results = query_job.result()\n",
     "results.to_dataframe().head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
