Store merlin url in variable

--- a/examples/batch/Batch Prediction Tutorial 1 - Iris Classifier.ipynb
+++ b/examples/batch/Batch Prediction Tutorial 1 - Iris Classifier.ipynb
@@ -149,9 +149,9 @@
     "1. `initialize` is the entry point for initializing the model. Within this method you can do initialization step such as loading model from artifact. `initialize` will be called once during model initialization. The argument to initialize is a dictionary containing a key value pair of artifact name and its URL. The artifact's keys are the same value as received by `log_pyfunc_model`.\n",
     "2. `infer` method is the prediction method of your model. `infer` accept `pandas.DataFrame` as the input and should return either `np.ndarray`, `pd.Series`, or `pd.DataFrame` of same length.\n",
     "\n",
-    "### IMPORTANT\n",
     "\n",
-    "During batch prediction job execution, `infer` method will be called multiple times with different partition of the source data as the input. It is important that `infer` should avoid containing aggregation operation (e.g. mean, min, max) as the operation will only be applicable to the given partition, hence the result will be incorrect. If  aggregation is required, it is recommeded to do it outside of the prediction job and store the result as a column in the source table.\n"
+    "> ### IMPORTANT\n",
+    "> During batch prediction job execution, `infer` method will be called multiple times with different partition of the source data as the input. It is important that `infer` should avoid containing aggregation operation (e.g. mean, min, max) as the operation will only be applicable to the given partition, hence the result will be incorrect. If  aggregation is required, it is recommeded to do it outside of the prediction job and store the result as a column in the source table.\n"
    ]
   },
   {
@@ -252,9 +252,10 @@
    "outputs": [],
    "source": [
     "import merlin\n",
-    "from merlin.model import ModelType\n",
     "\n",
-    "merlin.set_url(\"localhost:3000/api/merlin\")"
+    "MERLIN_API_URL=\"http://localhost:3000/api/merlin\"\n",
+    "\n",
+    "merlin.set_url(MERLIN_API_URL)"
    ]
   },
   {
@@ -305,6 +306,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from merlin.model import ModelType\n",
+    "\n",
     "merlin.set_model(\"iris-batch\", ModelType.PYFUNC_V2)"
    ]
   },
@@ -388,33 +391,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use `merlin.batch.source.BigQuerySource` class to configure the data source of the prediction job"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "source_table = \"your-gcp-project.dataset.table\"\n",
-    "sink_table = \"your-gcp-project.dataset.result_table\"\n",
-    "service_account = \"your-gcp-project.iam.gserviceaccount.com\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from merlin.batch.source import BigQuerySource"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "We can use `merlin.batch.source.BigQuerySource` class to configure the data source of the prediction job.\n",
+    "\n",
     "There are 2 mandatory fields that must be specified in the source config: `table` and `features`.\n",
     "\n",
     "1. `table`: is BQ table id in the <gcp_project.dataset_name.table_name> format\n",
@@ -427,7 +405,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bq_source = BigQuerySource(table=source_table,\n",
+    "from merlin.batch.source import BigQuerySource\n",
+    "\n",
+    "SOURCE_TABLE = \"gcp-project.dataset.table\"\n",
+    "\n",
+    "bq_source = BigQuerySource(table=SOURCE_TABLE,\n",
     "                           features=[\"sepal_length\", \n",
     "                                     \"sepal_width\", \n",
     "                                     \"petal_length\", \n",
@@ -445,33 +427,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we configure the destination of prediction job result using `merlin.batch.sink.BigQuerySink` class"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from merlin.batch.sink import BigQuerySink"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Next, we configure the destination of prediction job result using `merlin.batch.sink.BigQuerySink` class.\n",
+    "\n",
     "In `BigQuerySink` class, we can specify several parameters:\n",
     "1. `table` (mandatory) is the destination table id in the <gcp_project.dataset_name.table_name> format\n",
     "2. `staging_bucket` (mandatory) is the bucket name that will be used to store prediction job result temporarily before loading it to destination table\n",
     "3. `result_column` (mandatory) is the column name that will be populated to contain the prediction result\n",
-    "4. `save_mode` (optional) is the write behavior, by default the value is SaveMode.ERRORIFEXISTS which will make the prediction job fail if the destination table already exists. Other possible value are: SaveMode.OVERWRITE, SaveMode.APPEND, and SaveMode.IGNORE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "4. `save_mode` (optional) is the write behavior, by default the value is SaveMode.ERRORIFEXISTS which will make the prediction job fail if the destination table already exists. Other possible value are: SaveMode.OVERWRITE, SaveMode.APPEND, and SaveMode.IGNORE\n",
+    "\n",
     "In our case, we will use `SaveMode.OVERWRITE` so that the destination table will be overwritten with the new value."
    ]
   },
@@ -481,10 +444,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from merlin.batch.sink import SaveMode\n",
+    "from merlin.batch.sink import BigQuerySink, SaveMode\n",
     "\n",
-    "bq_sink = BigQuerySink(table=sink_table,\n",
-    "                       staging_bucket=\"your-bucket\",\n",
+    "SINK_TABLE = \"gcp-project.dataset.result_table\"\n",
+    "SINK_STAGING_BUCKET=\"gcs-bucket\"\n",
+    "\n",
+    "bq_sink = BigQuerySink(table=SINK_TABLE,\n",
+    "                       staging_bucket=SINK_STAGING_BUCKET,\n",
     "                       result_column=\"species\",\n",
     "                       save_mode=SaveMode.OVERWRITE)"
    ]
@@ -524,9 +490,11 @@
    "source": [
     "from merlin.batch.config import PredictionJobConfig\n",
     "\n",
+    "SERVICE_ACCOUNT_NAME = \"service-account@gcp-project.iam.gserviceaccount.com\"\n",
+    "\n",
     "job_config = PredictionJobConfig(source=bq_source, \n",
     "                                 sink=bq_sink, \n",
-    "                                 service_account_name=service_account)"
+    "                                 service_account_name=SERVICE_ACCOUNT_NAME)"
    ]
   },
   {
@@ -606,13 +574,6 @@
     "results = query_job.result()\n",
     "results.to_dataframe().head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -631,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
