--- a/examples/batch/Batch Prediction Tutorial 2 - New York Taxi .ipynb
+++ b/examples/batch/Batch Prediction Tutorial 2 - New York Taxi .ipynb
@@ -334,9 +334,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from merlin.model import PyFuncV2Model\n",
     "import joblib\n",
     "import os\n",
+    "from merlin.model import PyFuncV2Model\n",
     "\n",
     "class NYTaxiFareModel(PyFuncV2Model):    \n",
     "    def initialize(self, artifacts):\n",
@@ -397,9 +397,10 @@
    "outputs": [],
    "source": [
     "import merlin\n",
-    "from merlin.model import ModelType\n",
     "\n",
-    "merlin.set_url(\"http://localhost:3000/api/merlin\")"
+    "MERLIN_API_URL=\"http://localhost:3000/api/merlin\"\n",
+    "\n",
+    "merlin.set_url(MERLIN_API_URL)"
    ]
   },
   {
@@ -445,6 +446,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from merlin.model import ModelType\n",
+    "\n",
     "merlin.set_model(\"nyc-batch\", ModelType.PYFUNC_V2)"
    ]
   },
@@ -521,30 +524,36 @@
    "outputs": [],
    "source": [
     "from merlin.batch.source import BigQuerySource\n",
-    "from merlin.batch.sink import BigQuerySink\n",
-    "from merlin.batch.sink import SaveMode\n",
+    "from merlin.batch.sink import BigQuerySink, SaveMode\n",
     "from merlin.batch.config import PredictionJobConfig, PredictionJobResourceRequest\n",
     "\n",
+    "SOURCE_TABLE = \"bigquery-public-data.new_york_taxi_trips.tlc_yellow_trips_2015\"\n",
+    "SINK_TABLE=\"gcp-project.dataset.ny_taxi_prediction\"\n",
+    "SINK_STAGING_BUCKET=\"gcs-bucket\"\n",
+    "SERVICE_ACCOUNT_NAME=\"batch-service-account@gcp-project.iam.gserviceaccount.com\"\n",
     "\n",
-    "bq_source = BigQuerySource(\"bigquery-public-data.new_york_taxi_trips.tlc_yellow_trips_2015\",\n",
+    "bq_source = BigQuerySource(SOURCE_TABLE,\n",
     "                           features=[ \"pickup_datetime\",\n",
     "                                      \"pickup_longitude\",\n",
     "                                      \"pickup_latitude\",\n",
     "                                      \"dropoff_longitude\",\n",
     "                                      \"dropoff_latitude\",\n",
     "                                      \"passenger_count\"])\n",
-    "bq_sink = BigQuerySink(\"your-gcp-project.dataset.ny_taxi_prediction\",\n",
-    "                       staging_bucket=\"your-bucket\",\n",
+    "\n",
+    "bq_sink = BigQuerySink(SINK_TABLE,\n",
+    "                       staging_bucket=SINK_STAGING_BUCKET,\n",
     "                       result_column=\"total_fare\",\n",
     "                       save_mode=SaveMode.OVERWRITE)\n",
+    "\n",
     "job_config = PredictionJobConfig(source=bq_source, \n",
     "                                 sink=bq_sink, \n",
-    "                                 service_account_name=\"batch-service-account@your-gcp-project.iam.gserviceaccount.com\",\n",
+    "                                 service_account_name=SERVICE_ACCOUNT_NAME,\n",
     "                                resource_request=PredictionJobResourceRequest(driver_cpu_request=\"1\",\n",
     "                                                    driver_memory_request=\"1Gi\",\n",
     "                                                    executor_cpu_request=\"2\",\n",
     "                                                    executor_memory_request=\"2Gi\",\n",
     "                                                    executor_replica=6))\n",
+    "\n",
     "job = v.create_prediction_job(job_config=job_config)"
    ]
   },
@@ -573,13 +582,6 @@
     "df = results.to_dataframe()\n",
     "df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
