Implement Custom Transformer to Model Deployment (#15)
* Implement Transformer to Version Endpoint

* Add transformer config on deployment page UI

* Update API port to 8080 as 3000 used by UI

* Update swagger api spec -- add transformer

* Add env vars to transformer object

* Display existing transformer spec in UI

* Update Transformer models gorm relation

* Integrate transformer to sdk

* Preload transformers without joining

* Update merlin-sdk version for pyfunc-server

* Address review - move transformer to models.Service

* Propagate transformer related env vars

* Increase timeout for local pyfunc server test

* Revert timeout for local pyfunc server test

* Add e2e test for transformer via python sdk test

* Fix sdk syntax

* Update API unit test

* Propagate docker registries list

* Cast env vars to string

--- a/examples/tensorflow/Tensorflow.ipynb
+++ b/examples/tensorflow/Tensorflow.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merlin.set_url(\"localhost:3000/api/merlin\")"
+    "merlin.set_url(\"http://localhost:8080\")"
    ]
   },
   {
@@ -87,7 +87,7 @@
     "\n",
     "`project` represent a project in real life. You may have multiple model within a project.\n",
     "\n",
-    "`merlin.set_project(<project_name>)` will set the active project into the name matched by argument. You can only set it to an existing project. If you would like to create a new project, please do so from the MLP console at http://localhost:3000/projects/create."
+    "`merlin.set_project(<project_name>)` will set the active project into the name matched by argument. You can only set it to an existing project. If you would like to create a new project, please do so from the MLP console at http://localhost:8080/projects/create."
    ]
   },
   {
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merlin.set_model(\"tensorflow-sample\", ModelType.TENSORFLOW)"
+    "merlin.set_model(\"tensorflow-transformer\", ModelType.TENSORFLOW)"
    ]
   },
   {
@@ -360,9 +360,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Merlin SDK",
+   "display_name": "Python 3.7.3 64-bit ('3.7.3': pyenv)",
    "language": "python",
-   "name": "Merlin-sdk"
+   "name": "python37364bit373pyenvddd48f4fc8a047bd9a82a4038e9e737a"
   },
   "language_info": {
    "codemirror_mode": {
@@ -374,9 +374,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
