Set default value for Transformer's enabled to True. Bump sdk to 0.8.0.dev0

--- a/examples/transformer/PyTorch-Transformer.ipynb
+++ b/examples/transformer/PyTorch-Transformer.ipynb
@@ -369,8 +369,7 @@
     "# Create a transformer object and its resources requests\n",
     "resource_request = ResourceRequest(min_replica=1, max_replica=1, \n",
     "                                   cpu_request=\"100m\", memory_request=\"200Mi\")\n",
-    "transformer = Transformer(enabled=True,\n",
-    "                          image=\"gcr.io/kubeflow-ci/kfserving/image-transformer:latest\",\n",
+    "transformer = Transformer(\"gcr.io/kubeflow-ci/kfserving/image-transformer:latest\",\n",
     "                          resource_request=resource_request)\n",
     "\n",
     "endpoint = merlin.deploy(v, transformer=transformer)"
